--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,13 @@ crossterm = "0.26.1"
 anyhow = "1.0.71"
 rkyv-with = "0.1.1"
 toml = "0.7.6"
+platform-info = "2.0.1"
+edid = "0.3.0"
+glob = "0.3.1"
+nom = "7.1.3"
+edid-rs = "0.1.0"
+pci-ids = "0.2.5"
+itertools = "0.11.0"
 
 [target.'cfg(windows)'.dependencies]
 winreg = "0.50.0"
