--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,12 +2,16 @@
 name = "mirafetch"
 version = "0.1.0"
 edition = "2021"
-include = ["/data"]
+description = "A Rust reimplementation of Hyfetch wih a focus on speed"
+license-file = "LICENSE.md"
+repository = "https://github.com/ArgentumCation/mirafetch"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+include = ["/data", "/src", "build.rs"]
+
 
 [dev-dependencies]
 cargo-semver-checks = "0.22.0"
+rkyv = { version = "0.7.42", features = ["validation"] }
 
 [build-dependencies]
 json5 = "*"
@@ -18,28 +22,21 @@ regex = "*"
 
 [dependencies]
 libc = "0.2.147"
-# owo-colors = "3.5.0"
 rayon = "1.7.0"
-json5 = "*"
 regex = "1.8.4"
 rkyv = { version = "0.7.42", features = ["validation"] }
 serde = { version = "1.0.164", features = ["derive"] }
-sysinfo = "0.29.2"
 time = "0.3.22"
 crossterm = "0.26.1"
 anyhow = "1.0.71"
 rkyv-with = "0.1.1"
 toml = "0.7.6"
-platform-info = "2.0.1"
-edid = "0.3.0"
 glob = "0.3.1"
-nom = "7.1.3"
-edid-rs = "0.1.0"
-pci-ids = "0.2.5"
+# nom = "7.1.3"
 itertools = "0.11.0"
-serde_yaml = "0.9.22"
 rustc-hash = "1.1.0"
 lazy_format = "2.0.0"
+directories = "5.0.1"
 
 [target.'cfg(windows)'.dependencies]
 winreg = "0.50.0"
@@ -59,11 +56,21 @@ windows = { version = "*", features = [
     "Win32_System_Wmi",
     "Win32_System_Com",
 ] }
-winsafe = { git = "https://github.com/rodrigocfd/winsafe", features = [
-    "kernel",
-    "user",
-    "dwm",
-] }
+winsafe = { version = "0.0.17", features = ["kernel", "user", "dwm"] }
+
+
+[target.'cfg(target_os = "linux")'.dependencies]
+platform-info = "2.0.1"
+pci-ids = "0.2.5"
+
 [profile.release]
 lto = true
 panic = "abort"
+
+[[bin]]
+name = "mirafetch"
+path = "src/main.rs"
+
+[lib]
+name = "mirafetch"
+path = "src/lib.rs"
