--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,6 +36,7 @@ itertools = "0.11.0"
 rustc-hash = "1.1.0"
 lazy_format = "2.0.0"
 directories = "5.0.1"
+lazy_static = "1.4.0"
 
 [target.'cfg(windows)'.dependencies]
 winreg = "0.50.0"
