--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ serde_yaml = "0.9.22"
 rkyv = { version = "0.7.42", features = ["validation"] }
 serde = { version = "1.0.164", features = ["derive"] }
 regex = "*"
+directories = "5.0.1"
 
 [dependencies]
 libc = "0.2.147"
@@ -37,6 +38,8 @@ rustc-hash = "1.1.0"
 lazy_format = "2.0.0"
 directories = "5.0.1"
 lazy_static = "1.4.0"
+exitcode = "1.1.2"
+num = "0.4.1"
 
 [target.'cfg(windows)'.dependencies]
 winreg = "0.50.0"
