refactor: migrate flags to toml, code cleanup

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ json5 = "*"
 serde_yaml = "0.9.22"
 rkyv = { version = "0.7.42", features = ["validation"] }
 serde = { version = "1.0.164", features = ["derive"] }
+toml = "0.7.6"
 regex = "*"
 bson = "*"
 directories = "5.0.1"
