--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ cargo-semver-checks = "0.22.0"
 rkyv = { version = "0.7.42", features = ["validation"] }
 
 [build-dependencies]
-json5 = "*"
+archive = { path = "archive" }
 serde_yaml = "0.9.22"
 rkyv = { version = "0.7.42", features = ["validation"] }
 serde = { version = "1.0.164", features = ["derive"] }
@@ -24,6 +24,7 @@ bson = "*"
 directories = "5.0.1"
 
 [dependencies]
+archive = { path = "archive" }
 libc = "0.2.147"
 rayon = "1.7.0"
 regex = "1.8.4"
@@ -43,6 +44,10 @@ lazy_static = "1.4.0"
 exitcode = "1.1.2"
 num = "0.4.1"
 arcstr = "1.1.5"
+
+[target.'cfg(target_os = "macos")'.dependencies]
+sysctl = "0.5.4"
+plist = "1.5.0"
 
 [target.'cfg(windows)'.dependencies]
 winreg = "0.50.0"
@@ -73,6 +78,11 @@ pci-ids = "0.2.5"
 lto = true
 panic = "abort"
 
+# The profile that 'cargo dist' will build with
+[profile.dist]
+inherits = "release"
+lto = "thin"
+
 [[bin]]
 name = "mirafetch"
 path = "src/main.rs"
@@ -80,3 +90,25 @@ path = "src/main.rs"
 [lib]
 name = "mirafetch"
 path = "src/lib.rs"
+
+[workspace]
+members = ["archive"]
+
+# Config for 'cargo dist'
+[workspace.metadata.dist]
+# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
+cargo-dist-version = "0.3.1"
+# CI backends to support
+ci = ["github"]
+# The installers to generate for each app
+installers = ["shell", "powershell", "homebrew"]
+# Target platforms to build apps for (Rust target-triple syntax)
+targets = [
+    "x86_64-unknown-linux-gnu",
+    "aarch64-apple-darwin",
+    "x86_64-apple-darwin",
+    "x86_64-pc-windows-msvc",
+]
+# Publish jobs to run in CI
+pr-run-mode = "plan"
+include = ["data/icons.yaml", "data/flags.toml"]
