--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,14 +14,17 @@ cargo-semver-checks="0.22.0"
 
 
 [dependencies]
-libc="0.2.147"
+libc={default-features=false, version="0.2.147"}
 rayon="1.7.0"
-regex="1.8.4"
-serde={version="1.0.164", features=["derive"]}
-time="0.3.22"
-crossterm="0.26.1"
+regex={features=[
+    "std",
+    "unicode-perl",
+], default-features=false, version="1.8.4"}
+serde={version="1.0.164", default-features=false}
+time={default-features=false, version="0.3.22"}
+crossterm={default-features=false, version="0.26.1"}
 anyhow="1.0.71"
-toml="0.7.6"
+toml={features=["parse"], default-features=false, version="0.7.6"}
 glob="0.3.1"
 itertools="0.11.0"
 rustc-hash="1.1.0"
@@ -29,34 +32,25 @@ lazy_format="2.0.0"
 directories="5.0.1"
 lazy_static="1.4.0"
 exitcode="1.1.2"
-num="0.4.1"
-arcstr="1.1.5"
-serde_yaml = "0.9.27"
-serde_with = "3.4.0"
+num={default-features=false, version="0.4.1"}
+arcstr={default-features=false, version="1.1.5"}
+serde_yaml="0.9.27"
+serde_with="3.4.0"
+
+[target.'cfg(windows)'.dependencies]
+winreg="0.50.0"
+wmi={default-features=false, version="0.13.1"}
+windows={version="*", features=[
+    "Win32_System_SystemInformation",
+    "Win32_Networking_WinSock",
+    "Win32_NetworkManagement_IpHelper",
+    "Win32_NetworkManagement_Ndis",
+], default-features=false}
+winsafe={version="0.0.17", features=["dwm"], default-features=false}
 
 [target.'cfg(target_os = "macos")'.dependencies]
 sysctl="0.5.4"
 plist="1.5.0"
-
-[target.'cfg(windows)'.dependencies]
-winreg="0.50.0"
-wmi="0.13.1"
-windows={version="*", features=[
-    "Data_Xml_Dom",
-    "Win32_Foundation",
-    "Win32_Security",
-    "Win32_System_Threading",
-    "Win32_UI_WindowsAndMessaging",
-    "Win32_System_SystemInformation",
-    "Networking",
-    "Networking_Connectivity",
-    "Win32_Networking_WinSock",
-    "Win32_NetworkManagement_IpHelper",
-    "Win32_NetworkManagement_Ndis",
-    "Win32_System_Wmi",
-    "Win32_System_Com",
-]}
-winsafe={version="0.0.17", features=["kernel", "user", "dwm"]}
 
 
 [target.'cfg(target_os = "linux")'.dependencies]
@@ -67,11 +61,6 @@ pci-ids="0.2.5"
 lto=true
 panic="abort"
 
-# The profile that 'cargo dist' will build with
-[profile.dist]
-inherits="release"
-lto="thin"
-
 [[bin]]
 name="mirafetch"
 path="src/main.rs"
@@ -79,24 +68,3 @@ path="src/main.rs"
 [lib]
 name="mirafetch"
 path="src/lib.rs"
-
-# [workspace]
-
-# Config for 'cargo dist'
-[workspace.metadata.dist]
-# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
-cargo-dist-version="0.3.1"
-# CI backends to support
-ci=["github"]
-# The installers to generate for each app
-installers=["shell", "powershell", "homebrew"]
-# Target platforms to build apps for (Rust target-triple syntax)
-targets=[
-    "x86_64-unknown-linux-gnu",
-    "aarch64-apple-darwin",
-    "x86_64-apple-darwin",
-    "x86_64-pc-windows-msvc",
-]
-# Publish jobs to run in CI
-pr-run-mode="plan"
-include=["data/icons.yaml", "data/flags.toml"]
