--- a/Cargo.toml
+++ b/Cargo.toml
@@ -51,6 +51,7 @@ winsafe={version="0.0.17", features=["dwm"], default-features=false}
 [target.'cfg(target_os = "macos")'.dependencies]
 sysctl="0.5.4"
 plist="1.5.0"
+whoami="1.4.1"
 
 
 [target.'cfg(target_os = "linux")'.dependencies]
