--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -18,5 +18,6 @@ jobs:
     - uses: actions/checkout@v3
     - name: Build
       run: cargo build --verbose
-    - name: Run tests
-      run: cargo test --verbose
+    # See https://github.com/ArgentumCation/mirafetch/pull/15#issuecomment-1826278518
+    # - name: Run tests
+    #   run: cargo test --verbose
