--- a/Cargo.toml
+++ b/Cargo.toml
@@ -51,7 +51,9 @@ winsafe={version="0.0.17", features=["dwm"], default-features=false}
 [target.'cfg(target_os = "macos")'.dependencies]
 sysctl="0.5.4"
 plist="1.5.0"
-
+whoami="1.4.1"
+platform-info="2.0.1"
+battery="0.7.8"
 
 [target.'cfg(target_os = "linux")'.dependencies]
 platform-info="2.0.1"
