--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ libc={default-features=false, version="0.2"}
 rayon="1.10"
 regex={features=[
     "std",
+    "perf",
     "unicode-perl",
 ], default-features=false, version="1.10"}
 serde={version="1.0.164", default-features=false, features=["derive"]}
