--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,15 +45,17 @@ smallvec = "1.13.2"
 platform-info="2.0"
 
 [target.'cfg(windows)'.dependencies]
+crossterm={default-features=false, features=["events","windows"],version="0.28"}
 winreg="0.52"
 wmi={default-features=false, version="0.14"}
 windows={version="0.59.0", features=[
+    "std",
     "Win32_System_SystemInformation",
     "Win32_Networking_WinSock",
     "Win32_NetworkManagement_IpHelper",
     "Win32_NetworkManagement_Ndis",
 ], default-features=false}
-winsafe={version="0.0", features=["dwm"], default-features=false}
+winsafe={version="0.0", features=["advapi","dwm","kernel"], default-features=false}
 
 [target.'cfg(target_os = "macos")'.dependencies]
 sysctl="0.6.0"
